--- a/Website/src/rendering/src/assets/css/layout/section-speakers.css
+++ b/Website/src/rendering/src/assets/css/layout/section-speakers.css
@@ -4,7 +4,7 @@
   background: url(../../img/background-pattern-dark.svg);
 
   .section__content__title {
-    @apply pt-10 text-orange;
+    @apply pt-10 text-orange normal-case;
   }
 
   .section__content__p {
